# can-python-do-that

./: .gitignore  README.md
Week2/PDFMiner/: README.md  main.py  pyproject.toml
Week2/PyLyrics/: README.md  main.py  pyproject.toml
Week2/Streamlit/: Pipfile  README.md  dataframe.py  pyproject.toml
Week3/poetry-demo/: pyproject.toml
