[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["Rohithgilla12 <gillarohith1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
streamlit = "^0.61.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
